FAVRDK-27: Fix flexslider overscroll issue on mobile devices

--- a/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/03-organisms/inline-navigation/inline-navigation.css
+++ b/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/03-organisms/inline-navigation/inline-navigation.css
@@ -28,6 +28,24 @@
     }
   }
 
+  @media (--viewport-sm-max) {
+    .layout--twocol-section & {
+      margin-left: calc(-1 * var(--container-spacing--mobile));
+      margin-right: calc(-1 * var(--container-spacing--mobile));
+    }
+
+    &-campaign,
+    &-news {
+      margin-left: calc(-1 * var(--container-spacing--mobile));
+      margin-right: calc(-1 * var(--container-spacing--mobile));
+
+      .inline-navigation__list {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+  }
+
   &-news {
     @media (--viewport-md-min) {
       .pager {
